--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,8 +9,14 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/appIcon180x.png",
-      "sizes": "180x180",
+      "src": "/appIcon192x.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/appIcon512x.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
